fix: images spacing

--- a/src/styles/_images.scss
+++ b/src/styles/_images.scss
@@ -11,4 +11,5 @@ img {
 // images
 .bx--row img {
   width: 100%;
+  display: block;
 }
